Jun 25 2005  devel  Added support for new wrt54g revisions/firmwares that use
                     prism0 for monitor data.  Set your capture type to
                     wrt54g,eth1:prism0,foo
Jun 21 2005 2005-06 Released 2005-06-R1.  Major code improvements and bugfixes,
                     including:
                     OpenBSD radiotap support
                     New gpsd interface code
                     Segfault fixes
                     IPW2200 Linux support
                     IPW2915 Linux support
                     Client updates (follow mode, segfaults, packet rate, 
                                     speed increases)
                     Fixed WPA detection
                     Cygwin fixes
                     IP detection rewrite and fixes
                     Reduced binary size by 100k for server/drone
                     Flite speech support
                     Drone GPS fixes
                     Autoconf fixes on RH and other distros
                     RT8180 Linux support
                     GPSMap speedups
                     GPSMap deprecation of broken sources
                     Various packet dissection fixes
                     Lots of other updates and bugfixes.
Jun 21 2005  devel  Merged patches from Pedro for OpenBSD ralink, prism2, and
                     readme
                    Deprecated broken gpsmap sources and set default to blank
                    Added "--disable-optimization" flag to turn off -Ox
Jun 20 2005  devel  Fixed condition where gps mode wasn't updated 
                    Updated to libpcap 0.9.1-kis
                    Patched libpcap to not include filtering code.  Kismet
                     doesn't use it, and its 100k of binary we can drop
Jun 19 2005  devel  Added more wireless vendors to the manuf map
Jun 18 2005  devel  Updated AP manuf/defaults info
                    Rewrote GPSD handling to be more like newcore, to correctly